<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.MainMenuActivity">

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:foreground="@drawable/back"
        android:scaleType="centerCrop"
        android:src="@drawable/image_1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000">

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:orientation="vertical"
            android:weightSum="20">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="8">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:text="@string/vmwally_menu"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/closeBtn"
                        android:layout_width="0sp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="X"
                        android:textAlignment="textEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/settingPinBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:backgroundTint="#22FFFFFF"
                    android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:cornerRadius="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/openExistWallet"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#22FFFFFF"
                        android:drawableLeft="@android:drawable/ic_dialog_map"
                        android:drawableRight="@android:drawable/arrow_down_float"
                        android:text="@string/open_existing_wallet"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        app:cornerRadius="12sp" />

                    <ListView
                        android:id="@+id/existWallets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/paidNewWallet"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:backgroundTint="#22FFFFFF"
                    android:drawableLeft="@android:drawable/ic_menu_save"
                    android:text="@string/paid_new_wallet"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:cornerRadius="12sp" />

                <Button
                    android:id="@+id/loadWalletFromTestStore"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    android:backgroundTint="#22FFFFFF"
                    android:drawableLeft="@android:drawable/stat_notify_sync_noanim"
                    android:text="@string/load_wallet_from_test_store"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:cornerRadius="12sp" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="11">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true">

                    <Button
                        android:id="@+id/exitBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:backgroundTint="#00FFFFFF"
                        android:drawableRight="@drawable/ic_exit_to_app"
                        android:text="@string/exit"
                        android:textColor="#00B7FF"
                        android:textSize="16sp" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>